load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["echoserver.go"],
    importpath = "github.com/romnnn/testcontainers-go/testresources",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)

go_binary(
    name = "testresources",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
